CI: Upgraded packages

--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -1,6 +1,6 @@
 <!-- Partials > Footer. -->
 <!-- Site footer. -->
-{{ $url := .URL }}
+{{ $url := .Permalink }}
 {{ $page := .Title }}
 
 <div class="footer__footnotes container row">
