--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,11 +1,11 @@
 <!-- Partials > Header. -->
 <!-- Header with logo and links. -->
-{{ $url := .URL }}
+{{ $url := .Permalink }}
 {{ $page := .Title }}
 
 <header class="header" role="banner">
   <div class="header__container container">
-    <a class="skip-link" href="{{ .URL }}#MainContent">
+    <a class="skip-link" href="{{ .Permalink }}#MainContent">
       Skip to content
     </a>
 
