BUILD: Expanded code with custom markdown styles and custom highlighter

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,10 +12,10 @@
 @import 'base/animation';
 @import 'base/grid';
 @import 'base/colour';
+@import 'base/code';
 @import 'base/helpers';
 @import 'base/layout';
 @import 'base/icon';
-@import 'base/rte';
 @import 'base/typography';
 @import 'base/a11y';
 
