BUILD: Added additional custom highlighting to JS

--- a/src/styles/base/code.scss
+++ b/src/styles/base/code.scss
@@ -110,8 +110,8 @@ code {
     color: $COLOR_CODE_DARK_GREEN;
   }
 
-  // Functions, boolean
-  .kd, .kc {
+  // Functions, boolean, operators
+  .kd, .kc, .operator {
     color: $COLOR_CODE_DARK_BLUE;
   }
 
