--- a/site/layouts/_default/blog.html
+++ b/site/layouts/_default/blog.html
@@ -2,20 +2,32 @@
   {{- .Content -}}
 
   <div class="row">
-    {{ range .Pages.ByPublishDate.Reverse }}
-      <div class="articles s8">
-        <h2 class="articles__title">
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
-        </h2>
+    {{ range $index, $element := .Pages.ByPublishDate.Reverse }}
+      {{ if (eq $index 0) }}
+        <div class="articles articles--large s8">
+          <h2 class="articles__title">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+          </h2>
 
-        <p class="articles__excerpt body-1">
-          {{ .Params.Excerpt }}
-        </p>
+          <p class="articles__excerpt body-1">
+            {{ .Params.Excerpt }}
+          </p>
 
-        <p class="articles__meta sub-text">
-          {{ partial "article-meta.html" . }}
-        </p>
-      </div>
+          <p class="articles__meta sub-text">
+            {{ partial "article-meta.html" . }}
+          </p>
+        </div>
+      {{ else }}
+        <div class="articles articles--small s8">
+          <h2 class="articles__title h2-5">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+          </h2>
+
+          <p class="articles__meta sub-text">
+            {{ partial "article-meta.html" . }}
+          </p>
+        </div>
+      {{ end }}
     {{ end }}
   </div>
 {{ end }}
