--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -41,6 +41,10 @@
     padding-right: $SPACING_S;
   }
 
+  &__title {
+    margin-bottom: 0;
+  }
+
   &__copyright {
     line-height: $LINE_HEIGHT_S;
     margin-top: $SPACING_S;
