CONTENT: Began writing "Super simple scroll animations" blog post

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -23,6 +23,7 @@
  * Components.
  */
 @import 'components/article';
+@import 'components/article-link';
 @import 'components/articles';
 @import 'components/entries';
 @import 'components/entry';
