CONTENT: Added latest Lake District visit

--- a/site/layouts/partials/block.html
+++ b/site/layouts/partials/block.html
@@ -52,7 +52,7 @@
                 </div>
               {{ end }}
 
-              {{ if .Params.location }}
+              {{ if .Params.distance }}
                 <div class="block__stat icon">
                   <span class="icon__image">
                     {{ partial "icons/distance.svg" . }}
@@ -64,7 +64,7 @@
                 </div>
               {{ end }}
 
-              {{ if .Params.location }}
+              {{ if .Params.mountains }}
                 <div class="block__stat icon">
                   <span class="icon__image">
                     {{ partial "icons/mountains.svg" . }}
@@ -76,7 +76,7 @@
                 </div>
               {{ end }}
 
-              {{ if .Params.location }}
+              {{ if .Params.steps }}
                 <div class="block__stat icon">
                   <span class="icon__image">
                     {{ partial "icons/steps.svg" . }}
