FEATURE: Added responsive image support to block, added new mountain image

--- a/site/layouts/partials/block.html
+++ b/site/layouts/partials/block.html
@@ -110,6 +110,14 @@
           {{ end }}
           loading="lazy"
           src="/images/{{ .Params.block_type }}/{{ .Params.handle }}.jpg"
+          {{ if .Params.srcset }}
+            sizes="auto"
+            srcset="
+              /images/{{ .Params.block_type }}/{{ .Params.handle }}_600x.jpg 600w,
+              /images/{{ .Params.block_type }}/{{ .Params.handle }}.jpg 900w,
+              /images/{{ .Params.block_type }}/{{ .Params.handle }}_1200x.jpg 1200w,
+            "
+          {{ end }}
         >
       {{ end }}
 
