CONTENT: Added building SofaSofa blog post, adjusted styles for inline code and longer blog posts

--- a/site/layouts/shortcodes/link.html
+++ b/site/layouts/shortcodes/link.html
@@ -1,6 +1,6 @@
 <!-- Shortcodes > Link. -->
 <!-- Article stand out link -->
-<a class="article-link" href='{{ .Get "url" }}'>
+<a class="article-link" href='{{ .Get "url" }}' rel="nofollow">
   <span class="article-link__title">{{ .Get "title" }}</span>
   <span class="article-link__subtitle">{{ .Get "subtitle" }}</span>
 </a>
