--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -66,7 +66,7 @@ h2,
 %h2 {
   font-size: 2rem;
   line-height: $LINE_HEIGHT_M;
-  margin-bottom: $SPACING_3XS;
+  margin-bottom: $SPACING_2XS;
 }
 
 .h2-5 {
@@ -88,6 +88,10 @@ p, .body-1 {
 
   &:not(:last-child) {
     margin-bottom: $SPACING_P;
+  }
+
+  + h2 {
+    margin-top: $SPACING_M;
   }
 
   + .body-2 {
