BUILD: Began adding elevation chart data, refactored how charts are loaded

--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -18,6 +18,14 @@
       </div>
     </div>
 
+    <div class="blocks__block chart">
+      <h2 class="chart__title">Elevation gain (metres)</h2>
+
+      <div class="chart__chart">
+        <canvas js-chart="elevation"></canvas>
+      </div>
+    </div>
+
     <!-- Year summaries -->
     <div id="SummariesAccordion" class="blocks__block entries">
       <h2 class="entries__title">Year in review</h2>
