--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -8,14 +8,10 @@
       <div class="chart__chart">
         <canvas js-chart="walking"></canvas>
       </div>
-    </div>
 
-    <div class="blocks__block chart">
-      <h2 class="chart__title">Total distances (miles)</h2>
-
-      <div class="chart__chart">
-        <canvas js-chart="total"></canvas>
-      </div>
+      <p class="chart__details sub-text">
+        <strong>Note:</strong> Only partial distance data exists for 2009.
+      </p>
     </div>
 
     <div class="blocks__block chart">
@@ -24,6 +20,22 @@
       <div class="chart__chart">
         <canvas js-chart="elevation"></canvas>
       </div>
+
+      <p class="chart__details sub-text">
+        <strong>Note:</strong> No elevation data exists before 2012, no running elevation data exists before 2015, and only partial running data exists for 2015.
+      </p>
+    </div>
+
+    <div class="blocks__block chart">
+      <h2 class="chart__title">Total distances (miles)</h2>
+
+      <div class="chart__chart">
+        <canvas js-chart="total"></canvas>
+      </div>
+
+      <p class="chart__details sub-text">
+        <strong>Note:</strong> Only partial distance data exists for 2009.
+      </p>
     </div>
 
     <!-- Year summaries -->
