--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -70,9 +70,10 @@
   }
 
   &__image {
+    height: auto;
     margin-bottom: $SPACING_S;
+    max-width: 100%;
     order: 1;
-    width: 100%;
   }
 
   &__logo {
