BUILD: Adjusted spacing of elements in blog posts

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -32,6 +32,7 @@ $SPACING_SXS: 1.5rem;
 $SPACING_S: 2rem;
 $SPACING_P: 2.5rem; // Text paragraph
 $SPACING_M: 3rem;
+$SPACING_ML: 5rem;
 $SPACING_L: 6rem;
 $SPACING_XL: 9rem;
 $SPACING_2XL: 12rem;
