--- a/site/layouts/partials/article-meta.html
+++ b/site/layouts/partials/article-meta.html
@@ -1,8 +1,8 @@
 <!-- Partials > Article meta. -->
 <!-- Blog article meta content. -->
-<strong class="articles__meta">Posted</strong> {{ .PublishDate.Format "02 January 2006" }} &nbsp; | &nbsp;
+<span class="articles__meta-title">Posted</span> {{ .PublishDate.Format "02 January 2006" }} &nbsp; | &nbsp;
 
-<strong class="articles__meta">Tags</strong>
+<span class="articles__meta-title">Tags</span>
 {{ with .Params.tags }}
   {{ range . }}
     {{ $href := print (absURL "tags/") (urlize .) }}
@@ -10,4 +10,6 @@
   {{ end }}
 {{ end }}
 
-&nbsp; | &nbsp; <a href="/blog">Back to blog</a>
+<span class="articles__return-link">
+  &nbsp; | &nbsp; <a class="text-link" href="/blog">Back to blog</a>
+</span>
