--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -11,9 +11,7 @@
     {{ end }}
   {{ end }}
 
-  <div class="row">
-    <p class="card__copy standfirst col s8 m6">
-      {{ .Get "copy" }}
-    </p>
-  </div>
+  <p class="card__copy standfirst">
+    {{ .Get "copy" }}
+  </p>
 </div>
