--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -66,7 +66,7 @@
     {{ block "main" . }}{{ end }}
   </main>
 
-  <footer class="footer" role="contentinfo">
+  <footer class="footer container" role="contentinfo">
     {{ block "footnotes" . }}
       {{ partial "footnotes" . }}
     {{ end }}
