--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
-  {{- .Content -}}
+  <div class="row">
+    <div class="col s4 l3-8">
+      {{- .Content -}}
+    </div>
+  </div>
 {{ end }}
