--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -1,11 +1,20 @@
 {{ define "main" }}
-  {{- .Content -}}
-  {{ partial "map" . }}
+  <div class="row">
+    <div class="col s4 l3-8">
+      {{- .Content -}}
+    </div>
+  </div>
 
-  <div class="blocks row">
-    {{ range (.Pages.ByParam "handle").Reverse }}
-      {{ partial "block" . }}
-    {{ end }}
+  <div class="row">
+    <div class="col s4 l2-9">
+      {{ partial "map" . }}
+
+      <div class="blocks">
+        {{ range (.Pages.ByParam "handle").Reverse }}
+          {{ partial "block" . }}
+        {{ end }}
+      </div>
+    </div>
   </div>
 
   <link href="/vendors/leaflet.min.css" rel="stylesheet">
