--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -44,10 +44,8 @@
   }
 
   &__copy {
-    max-width: 700px;
-
     &:not(:last-child) {
-      margin-bottom: 0;
+      margin-bottom: $SPACING_S;
     }
   }
 
